--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,9 +17,12 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+
   flutter:
     sdk: flutter
-
+  #flutter本地化
+  flutter_localizations:
+    sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -42,6 +45,13 @@ dependencies:
   dio_cookie_manager: ^1.0.0
   #目前最好用的webView
   #webview_flutter: ^0.3.19+9
+  flutter_bubble: ^0.0.1
+  keyboard_visibility: ^0.5.6
+  emoji_picker: ^0.1.0
+  shared_preferences: any
+  rongcloud_im_plugin: ^1.1.1
+
+
 
 
 
@@ -63,9 +73,16 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+
+    - images/img_1.jpeg
+    - images/img_2.jpeg
+    - images/img_3.jpeg
+    - images/img_4.jpeg
+    - images/img_5.webp
+    - images/img_6.webp
+    - images/img_7.webp
+    - images/img_8.webp
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
